<resources>
    <string name="app_name">FeedApp</string>
    <string name="menu">Menu</string>
    <string name="recipes">Recipes</string>
    <string name="shopping">Shopping</string>
    <string name="more">More</string>
    <string name="Option1">Option1</string>
    <string name="Option2">Option2</string>
    <string name="Account">Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="LoginToFeedApp">Login</string>
    <string name="RegisterNow2"><u>Register now!</u></string>
    <string name="RegisterNow">Register now!</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="create_an_account_and_stay_fit">Create an account and stay fit!</string>
    <string name="login_now"><u>Login Now!</u></string>
    <string name="Summation">Summation</string>
    <string name="Menu">Menu</string>
    <string name="Calories">Calories</string>
    <string name="Fat">Fat</string>

    <string-array name="activitySpinnerEntities">
        <item>Brak aktywnosci, praca siedzaca</item>
        <item>Niska aktywnosc (praca siedzaca i 1-2 treningi w tygodniu)</item>
        <item>Srednia aktywnosc (praca siedzaca i treningi 3-4 razy w tygodniu)</item>
        <item>Wysoka aktywnosc (praca fizyczna i 3-4 treningi w tygodniu)</item>
        <item>Bardzo wysoka aktywnosc (zawodowi sportowcy, osoby codziennie trenujace)</item>
    </string-array>

    <string-array name="goalSpinnerEntities">
        <item>Redukcja</item>
        <item>Utrzymanie wagi</item>
        <item>Przybranie masy</item>
    </string-array>

    <string-array name="genderSpinnerEntities">
        <item>Mezczyzna</item>
        <item>Kobieta</item>
    </string-array>

    <string-array name="meals">
        <item>Breakfast</item>
        <item>Breakfast II</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Supper</item>
    </string-array>

    <string-array name="multi">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
    </string-array>

</resources>